--- a/.github/workflows/bullfrog.yml
+++ b/.github/workflows/bullfrog.yml
@@ -14,6 +14,9 @@ permissions:
 
 jobs:
   check-diff:
+    permissions:
+      contents: read
+      pull-requests: read
     runs-on: ubuntu-22.04
     outputs:
       diff: ${{ steps.changes.outputs.src }}
@@ -337,7 +340,6 @@ jobs:
     steps:
       - name: Enable egress filtering
         uses: bullfrogsec/bullfrog@1472c28724ef13ea0adc54d0a42c2853d42786b1
-
         with:
           egress-policy: block
           allowed-domains: |
