--- a/action.yml
+++ b/action.yml
@@ -22,10 +22,18 @@ inputs:
     type: boolean
     default: true
 
+  api-token:
+    description: "API token for submitting results to the Bullfrog control plane. If not provided, results will not be published."
+
   _agent-download-base-url:
     description: "(Internal) Base URL for fetching the agent binary. This is useful for testing changes in a fork. The URL should end with a slash."
     type: string
     default: "https://github.com/bullfrogsec/bullfrog/releases/download/"
+
+  _control-plane-base-url:
+    description: "(Internal) Base URL for the Bullfrog control plane API. This is useful for testing changes in a fork. The URL should end with a slash."
+    type: string
+    default: "https://app.bullfrogsec.com/"
 
   _log-directory:
     description: "(Internal) Directory to store log files."
