don't trust github by default

--- a/.github/workflows/bullfrog.yml
+++ b/.github/workflows/bullfrog.yml
@@ -2,8 +2,8 @@ name: Build, test and release
 
 on:
   push:
-    branches:
-      - main
+    # branches:
+    #   - main
 
   pull_request:
     branches:
