--- a/.github/workflows/bullfrog.yml
+++ b/.github/workflows/bullfrog.yml
@@ -230,18 +230,7 @@ jobs:
           _control-plane-base-url: https://005366084ac7.ngrok-free.app/
 
       - name: Test curl calls within Docker
-        run: |
-          docker run --rm --entrypoint sh alpine/curl:8.7.1 -c "
-            if ! timeout 5 curl https://www.google.com --output /dev/null; then
-              echo 'Expected curl to www.google.com to succeed, but it failed';
-              exit 1;
-            fi;
-
-            if timeout 5 curl https://www.bing.com --output /dev/null; then
-              echo 'Expected curl to www.bing.com to fail, but it succeeded';
-              exit 1;
-            fi;
-          "
+        run: source test/docker.sh
 
       - name: Nginx
         run: source test/docker_nginx.sh
