--- a/action.yml
+++ b/action.yml
@@ -22,6 +22,11 @@ inputs:
     type: boolean
     default: true
 
+  collect-process-info:
+    description: "Enable this option to collect process information (PID, process name, command line) for network connections. Options: 'true' (default) or 'false'."
+    type: boolean
+    default: true
+
   api-token:
     description: "API token for submitting results to the Bullfrog control plane. If not provided, results will not be published."
 
