--- a/agent/Makefile
+++ b/agent/Makefile
@@ -26,8 +26,8 @@ GOFMT_OUTPUT = $(shell gofmt -l .)
 
 .PHONY: test.lint
 test.lint:
-	@if [ -n "$(GOFMT_OUTPUT)" ]; then \
-		echo "$(GOFMT_OUTPUT)"; \
+	@if [ -n "$$(gofmt -l ./pkg/agent ./cmd/agent)" ]; then \
+		echo "$$(gofmt -l ./pkg/agent ./cmd/agent)"; \
 		exit 1; \
 	fi
 
@@ -37,7 +37,7 @@ test.types:
 
 .PHONY: test.unit
 test.unit:
-	go test
+	go test ./pkg/agent/...
 
 .PHONY: test.generate-coverage
 test.generate-coverage:
