ci: add pre-release workflow

--- a/.github/workflows/bullfrog.yml
+++ b/.github/workflows/bullfrog.yml
@@ -4,8 +4,10 @@ on:
   push:
     branches:
       - main
+      - "beta/**"
 
   pull_request:
+    types: [opened, synchronize, reopened]
     branches:
       - main
 
@@ -99,6 +101,135 @@ jobs:
         run: |
           make test.artifacts
 
+  determine-version:
+    runs-on: ubuntu-22.04
+    outputs:
+      version_tag: ${{ steps.version.outputs.tag }}
+      is_beta: ${{ steps.version.outputs.is_beta }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
+        with:
+          ref: ${{ github.head_ref || github.ref }}
+
+      - name: Determine version tag
+        id: version
+        run: |
+          if [[ "${{ github.head_ref }}" != release-please--branches--* ]] && [[ "${{ github.ref }}" != refs/heads/beta/* ]]; then
+            echo "Not a candidate for a beta release"
+            echo "is_beta=false" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          VERSION=$(jq -r '.version' package.json)
+
+          # Determine context: beta push or release-please PR
+          if [[ "${{ github.head_ref }}" == release-please--branches--* ]]; then
+            # RC release for release-please PR
+            RC_VERSION=$(jq -r '.[]' .release-please-manifest.json | head -1)
+            TAG_NAME="v${RC_VERSION}-rc"
+          elif [[ "${{ github.ref }}" == refs/heads/beta/* ]]; then
+            # Beta release
+            BRANCH_NAME="${GITHUB_REF#refs/heads/beta/}"
+            SANITIZED=$(echo "$BRANCH_NAME" | tr '[:upper:]' '[:lower:]' | sed 's/[^a-z0-9-]/-/g' | sed 's/--*/-/g' | sed 's/^-//;s/-$//')
+            TAG_NAME="v${VERSION}-beta-${SANITIZED}"
+          fi
+
+          echo "tag=$TAG_NAME" >> $GITHUB_OUTPUT
+          echo "is_beta=true" >> $GITHUB_OUTPUT
+          echo "Creating beta release: $TAG_NAME"
+
+  create-beta-prerelease:
+    needs: [determine-version, build, check-artifacts]
+    if: needs.determine-version.outputs.is_beta == 'true'
+    runs-on: ubuntu-22.04
+    timeout-minutes: 5
+    permissions:
+      contents: write
+    steps:
+      - name: Enable egress filtering
+        uses: bullfrogsec/bullfrog@1831f79cce8ad602eef14d2163873f27081ebfb3
+        with:
+          egress-policy: block
+          allowed-domains: |
+            *.github.com
+            uploads.github.com
+
+      - name: Checkout
+        uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
+        with:
+          ref: ${{ github.head_ref || github.ref }}
+
+      - uses: actions/download-artifact@018cc2cf5baa6db3ef3c5f8a56943fffe632ef53 # v6.0.0
+        with:
+          name: build-artifacts
+
+      - name: Create or update beta release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SHA: ${{ github.sha }}
+        run: |
+          TAG_NAME="${{ needs.determine-version.outputs.version_tag }}"
+          IS_BETA="${{ needs.determine-version.outputs.is_beta }}"
+
+          # Delete existing release and tag if they exist
+          gh release delete "$TAG_NAME" --yes || true
+          git push origin ":refs/tags/$TAG_NAME" || true
+
+          RELEASE_TYPE="--prerelease"
+          TITLE="$TAG_NAME"
+          NOTES="Automated beta release from branch ${GITHUB_REF#refs/heads/}
+
+          **Testing this beta:**
+          \`\`\`yaml
+          - uses: bullfrogsec/bullfrog@$SHA
+            with:
+              _agent-version: '$TAG_NAME'
+              egress-policy: block
+              allowed-domains: example.com
+          \`\`\`"
+
+          # Create release
+          tar -czf agent.tar.gz agent/agent
+          gh release create "$TAG_NAME" \
+            --title "$TITLE" \
+            --notes "$NOTES" \
+            --target "$SHA" \
+            --prerelease \
+            agent.tar.gz
+
+  test-beta-release:
+    needs: [determine-version, create-beta-prerelease]
+    if: needs.determine-version.outputs.is_beta == 'true'
+    runs-on: ubuntu-22.04
+    timeout-minutes: 5
+    steps:
+      - name: Checkout
+        uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3 # v6.0.0
+        with:
+          ref: ${{ github.head_ref || github.ref }}
+
+      - name: Test beta release with action
+        uses: ./
+        with:
+          _agent-version: ${{ needs.determine-version.outputs.version_tag }}
+          egress-policy: block
+          allowed-domains: www.google.com
+
+      - name: Verify blocking works
+        run: |
+          if curl https://www.google.com --max-time 5 --output /dev/null; then
+            echo "Allowed domain works"
+          else
+            echo "Expected curl to allowed domain to succeed"
+            exit 1
+          fi
+
+          if curl https://www.bing.com --max-time 5 --output /dev/null; then
+            echo "Block failed - unauthorized domain accessible"
+            exit 1
+          fi
+
   test-audit:
     needs: build
     runs-on: ubuntu-22.04
@@ -188,7 +319,7 @@ jobs:
           egress-policy: block
 
       - name: Make HTTP requests
-        run:  |
+        run: |
           source test/make_http_requests.sh
           source test/make_docker_pull.sh
 
@@ -315,7 +446,7 @@ jobs:
           make test.types
 
   pre-release:
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     runs-on: ubuntu-22.04
     permissions:
       contents: write
